@@ -1,0 +1,7 @@
+/* { dg-do compile } */
+/* { dg-options "-O -fnon-call-exceptions" } */
+int f (float g)
+{
+  try { return g >= 0; }
+  catch (...) {}
+}
